search more responsive

--- a/search.html
+++ b/search.html
@@ -189,44 +189,7 @@
                   <option value="Older"> Older</option>
                 </select>
               </div>
-              <!-- <div class="btn-group">
-                <button type="button" class="btn text-left" name="sort_options" style="width:120px;">Sort options</button>
-                <button class="btn dropdown-toggle dropdown-toggle-split" name="recordinput" data-toggle="dropdown">
-                  <span class="caret"></span>
-                </button>
-                <div id="mySel2" class="dropdown-menu" multiple="multiple" style="width:200px;">
-                  <a class="dropdown-item" href="#">A-Z</a>
-                  <a class="dropdown-item" href="#">Z-A</a>
-                  <a class="dropdown-item" href="#">Most events</a>
-                  <a class="dropdown-item" href="#">Least events</a>
-                </div>
-              </div> -->
-
-              <!-- <fieldset class="form-group" id="sort">
-                <legend>Alphabetical/Date</legend>
-                <div class="container">
-                  <div class="form-check mb-2">
-                    <label class="form-check-label">
-                      <input type="radio" class="form-check-input" name="optionsRadiosSort" id="optionsRadios1" value="option1" checked> A-Z
-                    </label>
-                  </div>
-                  <div class="form-check mb-2">
-                    <label class="form-check-label">
-                      <input type="radio" class="form-check-input" name="optionsRadiosSort" id="optionsRadios2" value="option2"> Z-A
-                    </label>
-                  </div>
-                  <div class="form-check mb-2">
-                    <label class="form-check-label">
-                      <input type="radio" class="form-check-input" name="optionsRadiosSort" id="optionsRadios3" value="option3"> Most recent
-                    </label>
-                  </div>
-                  <div class="form-check mb-2">
-                    <label class="form-check-label">
-                      <input type="radio" class="form-check-input" name="optionsRadiosSort" id="optionsRadios4" value="option4"> Older
-                    </label>
-                  </div>
-                </div>
-              </fieldset> -->
+              
             </div>
 
             <div class="tab-pane" id="tab_users">
@@ -252,10 +215,10 @@
             <div class="tab-pane active">
               <div class="jumbotron p-1 mb-1 mt-1">
                 <div class="row">
-                  <div class="col-md-3">
+                  <div class="col-sm-3 col-5 d-flex align-items-center">
                     <img src="./imgs/square.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-md-9">
+                  <div class="col-sm-9 col-7">
                     <h3>Concerto Mega Fixe</h3>
                     <h6>Porto, Portugal</h6>
                     <h6>17/02/2018</h6>
@@ -264,10 +227,10 @@
               </div>
               <div class="jumbotron p-1 mb-1">
                 <div class="row">
-                  <div class="col-md-3">
+                  <div class="col-sm-3 col-5 d-flex align-items-center">
                     <img src="./imgs/maku.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-md-9">
+                  <div class="col-sm-9 col-7">
                     <h3>Aniversário Makukula</h3>
                     <h6>Kishasa, Congo</h6>
                     <h6>04/03/2018</h6>
@@ -276,10 +239,10 @@
               </div>
               <div class="jumbotron p-1 mb-1">
                 <div class="row">
-                  <div class="col-md-3">
+                  <div class="col-sm-3 col-5 d-flex align-items-center">
                     <img src="./imgs/plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-md-9">
+                  <div class="col-sm-9 col-7">
                     <h3>Notas de Plog</h3>
                     <h6>Porto, Portugal</h6>
                     <h6>29/02/2020</h6>
@@ -288,10 +251,10 @@
               </div>
               <div class="jumbotron p-1 mb-1">
                 <div class="row">
-                  <div class="col-md-3">
+                  <div class="col-sm-3 col-5 d-flex align-items-center">
                     <img src="./imgs/benfica_maritimo.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-md-9">
+                  <div class="col-sm-9 col-7">
                     <h3>Benfica-Marítimo</h3>
                     <h6>Lisboa, Portugal</h6>
                     <h6>03/03/2018</h6>
@@ -300,10 +263,10 @@
               </div>
               <div class="jumbotron p-1 mb-1">
                 <div class="row">
-                  <div class="col-md-3">
+                  <div class="col-sm-3 col-5 d-flex align-items-center">
                     <img src="./imgs/benfica_aves.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-md-9">
+                  <div class="col-sm-9 col-7">
                     <h3>Benfica-Aves</h3>
                     <h6>Lisboa, Portugal</h6>
                     <h6>10/03/2018</h6>
@@ -312,10 +275,10 @@
               </div>
               <div class="jumbotron p-1">
                 <div class="row">
-                  <div class="col-md-3">
+                  <div class="col-sm-3 col-5 d-flex align-items-center">
                     <img src="./imgs/feirense_benfica.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-md-9">
+                  <div class="col-sm-9 col-7">
                     <h3>Feirense-Benfica</h3>
                     <h6>Santa Maria da Feira, Portugal</h6>
                     <h6>17/03/2018</h6>
@@ -327,30 +290,30 @@
             <div class="tab-pane">
               <div class="jumbotron p-1 mb-1 mt-1">
                 <div class="row">
-                  <div class="col-md-3">
+                  <div class="col-sm-3 col-5 d-flex align-items-center">
                     <img src="./imgs/jonas.png" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-md-9">
+                  <div class="col-sm-9 col-7">
                     <h3>JonasGoncalves</h3>
                   </div>
                 </div>
               </div>
               <div class="jumbotron p-1 mb-1">
                 <div class="row">
-                  <div class="col-md-3">
+                  <div class="col-sm-3 col-5 d-flex align-items-center">
                     <img src="./imgs/cervi.png" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-md-9">
+                  <div class="col-sm-9 col-7">
                     <h3>FrancoCervi</h3>
                   </div>
                 </div>
               </div>
               <div class="jumbotron p-1">
                 <div class="row">
-                  <div class="col-md-3">
+                  <div class="col-sm-3 col-5 d-flex align-items-center">
                     <img src="./imgs/aalmeida.png" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-md-9">
+                  <div class="col-sm-9 col-7">
                     <h3>AndreAlmeida</h3>
                   </div>
                 </div>
