--- a/profileFriend.html
+++ b/profileFriend.html
@@ -27,7 +27,7 @@
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Search">
             <span class="input-group-append">
-              <button type="button" class="btn btn-outline-light" onclick="window.location.href='./search.html'"><i class="fas fa-search"></i></button>
+              <button type="button" class="btn btn-outline-light" onclick="window.location.href='./searchLogged.html'"><i class="fas fa-search"></i></button>
             </span>
           </div>
 
