--- a/about.html
+++ b/about.html
@@ -233,6 +233,14 @@
     </div>
 
     <script language="JavaScript" src="./script.js" type="text/javascript" charset="utf-8"></script>
+
+    <footer>
+        <br>
+        <br>
+        <a href="./about.html">
+            <p class="text-center">About Us</p>
+        </a>
+    </footer>
 </body>
 
 </html>
