--- a/eventPage.html
+++ b/eventPage.html
@@ -461,5 +461,13 @@
 
 <script src="script.js"></script>
 
+<footer>
+    <br>
+    <br>
+    <a href="./about.html">
+        <p class="text-center">About Us</p>
+    </a>
+</footer>
+
 </body>
 </html>
