--- a/profileFriend.html
+++ b/profileFriend.html
@@ -279,6 +279,13 @@
   </div>
 </div>
 
+<footer>
+  <br>
+  <br>
+  <a href="./about.html">
+    <p class="text-center">About Us</p>
+  </a>
+</footer>
 
 </body>
 </html>
