--- a/searchLogged.html
+++ b/searchLogged.html
@@ -247,10 +247,10 @@
             <div class="tab-pane active">
               <div class="jumbotron p-1 mb-1 mt-1">
                 <div class="row">
-                  <div class="col-sm-3 col-5 d-flex align-items-center">
+                  <div class="col-md-3">
                     <img src="./imgs/square.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-sm-9 col-7">
+                  <div class="col-md-9">
                     <h3>Concerto Mega Fixe</h3>
                     <h6>Porto, Portugal</h6>
                     <h6>17/02/2018</h6>
@@ -259,10 +259,10 @@
               </div>
               <div class="jumbotron p-1 mb-1">
                 <div class="row">
-                  <div class="col-sm-3 col-5 d-flex align-items-center">
+                  <div class="col-md-3">
                     <img src="./imgs/maku.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-sm-9 col-7">
+                  <div class="col-md-9">
                     <h3>Aniversário Makukula</h3>
                     <h6>Kishasa, Congo</h6>
                     <h6>04/03/2018</h6>
@@ -271,10 +271,10 @@
               </div>
               <div class="jumbotron p-1 mb-1">
                 <div class="row">
-                  <div class="col-sm-3 col-5 d-flex align-items-center">
+                  <div class="col-md-3">
                     <img src="./imgs/plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-sm-9 col-7">
+                  <div class="col-md-9">
                     <h3>Notas de Plog</h3>
                     <h6>Porto, Portugal</h6>
                     <h6>29/02/2020</h6>
@@ -283,10 +283,10 @@
               </div>
               <div class="jumbotron p-1 mb-1">
                 <div class="row">
-                  <div class="col-sm-3 col-5 d-flex align-items-center">
+                  <div class="col-md-3">
                     <img src="./imgs/benfica_maritimo.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-sm-9 col-7">
+                  <div class="col-md-9">
                     <h3>Benfica-Marítimo</h3>
                     <h6>Lisboa, Portugal</h6>
                     <h6>03/03/2018</h6>
@@ -295,10 +295,10 @@
               </div>
               <div class="jumbotron p-1 mb-1">
                 <div class="row">
-                  <div class="col-sm-3 col-5 d-flex align-items-center">
+                  <div class="col-md-3">
                     <img src="./imgs/benfica_aves.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-sm-9 col-7">
+                  <div class="col-md-9">
                     <h3>Benfica-Aves</h3>
                     <h6>Lisboa, Portugal</h6>
                     <h6>10/03/2018</h6>
@@ -307,10 +307,10 @@
               </div>
               <div class="jumbotron p-1">
                 <div class="row">
-                  <div class="col-sm-3 col-5 d-flex align-items-center">
+                  <div class="col-md-3">
                     <img src="./imgs/feirense_benfica.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-sm-9 col-7">
+                  <div class="col-md-9">
                     <h3>Feirense-Benfica</h3>
                     <h6>Santa Maria da Feira, Portugal</h6>
                     <h6>17/03/2018</h6>
@@ -318,41 +318,41 @@
                 </div>
               </div>
             </div>
-
+      
             <div class="tab-pane">
               <div class="jumbotron p-1 mb-1 mt-1">
                 <div class="row">
-                  <div class="col-sm-3 col-5 d-flex align-items-center">
+                  <div class="col-md-3">
                     <img src="./imgs/jonas.png" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-sm-9 col-7">
+                  <div class="col-md-9">
                     <h3>JonasGoncalves</h3>
                   </div>
                 </div>
               </div>
               <div class="jumbotron p-1 mb-1">
                 <div class="row">
-                  <div class="col-sm-3 col-5 d-flex align-items-center">
+                  <div class="col-md-3">
                     <img src="./imgs/cervi.png" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-sm-9 col-7">
+                  <div class="col-md-9">
                     <h3>FrancoCervi</h3>
                   </div>
                 </div>
               </div>
               <div class="jumbotron p-1">
                 <div class="row">
-                  <div class="col-sm-3 col-5 d-flex align-items-center">
+                  <div class="col-md-3">
                     <img src="./imgs/aalmeida.png" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-sm-9 col-7">
+                  <div class="col-md-9">
                     <h3>AndreAlmeida</h3>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-
+      
         </div>
         <ul class="pagination justify-content-center mt-3">
           <li class="page-item">
@@ -385,6 +385,15 @@
   </div>
 
   <script language="JavaScript" src="./script.js" type="text/javascript" charset="utf-8"></script>
+
+  <footer>
+    <br>
+    <br>
+    <a href="./about.html">
+      <p class="text-center">About Us</p>
+    </a>
+  </footer>
+  
 </body>
 
 </html>
