--- a/profileAddFriend.html
+++ b/profileAddFriend.html
@@ -278,6 +278,14 @@
   </div>
 </div>
 
+<footer>
+  <br>
+  <br>
+  <a href="./about.html">
+    <p class="text-center">About Us</p>
+  </a>
+</footer>
+
 
 </body>
 </html>
