index nomes normais

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               <img src="./imgs/square.jpg" class="img-fluid rounded" alt="Cinque Terre">
             </div>
             <div class="col-md-9">
-              <h3>Concerto Mega Fixe</h3>
+              <h3>Concerto Tony Carreira</h3>
               <h6>Porto, Portugal</h6>
               <h6>17/02/2018</h6>
             </div>
@@ -196,7 +196,7 @@
               <img src="./imgs/plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
             </div>
             <div class="col-md-9">
-              <h3>Notas de Plog</h3>
+              <h3>SuperBock SuperRock</h3>
               <h6>Porto, Portugal</h6>
               <h6>29/02/2020</h6>
             </div>
