--- a/loggedMainPage.html
+++ b/loggedMainPage.html
@@ -268,7 +268,7 @@
                     <img src="./imgs/plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
                   <div class="col-sm-9 col-7 infoEvent">
-                    <h3>Notas de Plog</h3>
+                    <h3>Jogo benificiário</h3>
                     <h6>Porto, Portugal</h6>
                     <h6>29/02/2020</h6>
                   </div>
@@ -283,7 +283,7 @@
                     <img src="./imgs/plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
                   <div class="col-sm-9 col-7 infoEvent">
-                    <h3>Notas de Plog</h3>
+                    <h3>Jogo benificiário</h3>
                     <h6>Porto, Portugal</h6>
                     <h6>29/02/2020</h6>
                   </div>
@@ -310,7 +310,7 @@
                     <img src="./imgs/plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
                   <div class="col-sm-9 col-7 infoEvent">
-                    <h3>Notas de Plog</h3>
+                    <h3>Jogo benificiário</h3>
                     <h6>Porto, Portugal</h6>
                     <h6>29/02/2020</h6>
                   </div>
