--- a/profile.html
+++ b/profile.html
@@ -228,7 +228,7 @@
                     <img src="./imgs/plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
                   <div class="col-md-9">
-                    <h3>Notas de Plog</h3>
+                    <h3>Festa do casino</h3>
                     <h6>Porto, Portugal</h6>
                     <h6>29/02/2020</h6>
                   </div>
