--- a/profile.html
+++ b/profile.html
@@ -54,7 +54,7 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="notifications">
               <a class="dropdown-item p-2" href="./eventPage.html">Makukula joined an event</a>
               <a class="dropdown-item p-2" href="#" data-toggle="modal" data-target="#add_friend">
-                MariGui wants to be your friend
+                Pedro Henriques wants to be your friend
               </a>
             </div>
           </div>
@@ -85,7 +85,7 @@
           <img src="./imgs/maku.jpg" class="img-fluid rounded" alt="Cinque Terre">
           <br>
           <br>
-          <h5 class="text-center">MariGui wants to be your friend, do you accept?</h5>
+          <h5 class="text-center">Pedro Henriques wants to be your friend, do you accept?</h5>
           <br>
           <div class="btn-group d-flex" role="group">
             <button type="button" class="btn btn-success w-100">YES</button>
