--- a/A3/index.html
+++ b/A3/index.html
@@ -168,11 +168,11 @@
       <div class="container">
         <div class="jumbotron p-1 mb-5 mt-1">
           <div class="row">
-            <div class="col-sm-3 col-5 d-flex align-items-center" >
+            <div class="col-md-3" >
               <img src="./imgs/square.jpg" class="img-fluid rounded" alt="Cinque Terre">
             </div>
-            <div class="col-sm-9 col-7">
-              <h3>Concerto Mega Fixe</h3>
+            <div class="col-md-9">
+              <h3>Concerto Tony Carreira</h3>
               <h6>Porto, Portugal</h6>
               <h6>17/02/2018</h6>
             </div>
@@ -180,10 +180,10 @@
         </div>
         <div class="jumbotron p-1 mb-5">
           <div class="row">
-            <div class="col-sm-3 col-5 d-flex align-items-center" >
+            <div class="col-md-3" >
               <img src="./imgs/maku.jpg" class="img-fluid rounded" alt="Cinque Terre">
             </div>
-            <div class="col-sm-9 col-7">
+            <div class="col-md-9">
               <h3>Aniversário Makukula</h3>
               <h6>Kishasa, Congo</h6>
               <h6>04/03/2018</h6>
@@ -192,11 +192,11 @@
         </div>
         <div class="jumbotron p-1">
           <div class="row">
-            <div class="col-sm-3 col-5 d-flex align-items-center" >
+            <div class="col-md-3" >
               <img src="./imgs/plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
             </div>
-            <div class="col-sm-9 col-7">
-              <h3>Notas de Plog</h3>
+            <div class="col-md-9">
+              <h3>SuperBock SuperRock</h3>
               <h6>Porto, Portugal</h6>
               <h6>29/02/2020</h6>
             </div>
@@ -206,6 +206,14 @@
     </div>
   </div>
 </div>
+
+<footer>
+  <br>
+  <br>
+  <a href="./about.html">
+    <p class="text-center">About Us</p>
+  </a>
+</footer>
 
 </body>
 </html>
