--- a/A3/search.html
+++ b/A3/search.html
@@ -27,7 +27,7 @@
 <body>
 
   <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-    <a class="navbar-brand" href="#">Event Manager</a>
+    <a class="navbar-brand" href="./index.html">Event Manager</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -37,39 +37,40 @@
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Search">
             <span class="input-group-append">
-              <button type="button" class="btn btn-outline-light">
+              <button type="button" class="btn btn-outline-light" onclick="window.location.href='./search.html'">
                 <i class="fas fa-search"></i>
               </button>
             </span>
           </div>
+  
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#" data-toggle="modal" data-target="#sign_up">
+            <i class="fas fa-user"></i> Sign Up </a>
+        </li>
+        <li class="navbar-item">
+          <a class="nav-link" href="#" data-toggle="modal" data-target="#login">
+            <i class="fas fa-sign-in-alt"></i> Login </a>
+        </li>
+      </ul>
     </div>
-    </li>
-    </ul>
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#" data-toggle="modal" data-target="#sign_up">
-          <i class="fas fa-user"></i> Sign Up </a>
-      </li>
-      <li class="navbar-item">
-        <a class="nav-link" href="#">
-          <i class="fas fa-sign-in-alt"></i> Login </a>
-      </li>
-    </ul>
     </div>
   </nav>
-
+  
   <div class="modal fade" id="sign_up">
     <div class="modal-dialog modal-sm">
-
+  
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header">
           <h4 class="modal-title">Sign Up</h4>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
-
+  
         <div class="modal-body ">
-
+  
           <label for="username">Username</label>
           <div class="input-group mb-2">
             <div class="input-group-prepend">
@@ -79,7 +80,7 @@
             </div>
             <input type="text" class="form-control" placeholder="Enter your Username">
           </div>
-
+  
           <label for="email">Email</label>
           <div class="input-group mb-2">
             <div class="input-group-prepend">
@@ -89,7 +90,7 @@
             </div>
             <input type="text" class="form-control" placeholder="Enter your Email">
           </div>
-
+  
           <label for="country">Country</label>
           <div class="input-group mb-2">
             <div class="input-group-prepend">
@@ -99,7 +100,7 @@
             </div>
             <input type="text" class="form-control" placeholder="Enter your Country">
           </div>
-
+  
           <label for="city">City</label>
           <div class="input-group mb-2">
             <div class="input-group-prepend">
@@ -109,7 +110,7 @@
             </div>
             <input type="text" class="form-control" placeholder="Enter your City">
           </div>
-
+  
           <label for="password">Password</label>
           <div class="input-group mb-2">
             <div class="input-group-prepend">
@@ -119,7 +120,7 @@
             </div>
             <input type="text" class="form-control" placeholder="Enter your Password">
           </div>
-
+  
           <label for="confpass">Confirm Password</label>
           <div class="input-group mb-2">
             <div class="input-group-prepend">
@@ -129,12 +130,75 @@
             </div>
             <input type="text" class="form-control" placeholder="Confirm your Password">
           </div>
-          <button type="button" class="btn btn-block btn-outline-dark">Sign Up</button>
+          <button type="button" class="btn btn-block btn-outline-dark mb-2">Sign Up</button>
+  
+          <div class="btn-group d-flex" role="group">
+            <button type="button" class="btn btn-primary w-100">
+              <i class="fab fa-facebook-f"></i>
+            </button>
+            <button type="button" class="btn btn-danger w-100">
+              <i class="fab fa-google"></i>
+            </button>
+            <button type="button" class="btn btn-secondary w-100">
+              <i class="fab fa-github"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="modal fade" id="login">
+    <div class="modal-dialog modal-sm">
+  
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Login </h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+  
+        <div class="modal-body ">
+  
+          <label for="username">Username</label>
+          <div class="input-group mb-2">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="username">
+                <i class="fas fa-user fa-fw"></i>
+              </span>
+            </div>
+            <input type="text" class="form-control" placeholder="Enter your Username">
+          </div>
+  
+          <label for="password">Password</label>
+          <div class="input-group mb-2">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="password">
+                <i class="fas fa-lock fa-fw"></i>
+              </span>
+            </div>
+            <input type="text" class="form-control" placeholder="Enter your Password">
+          </div>
+  
+          <button type="button" class="btn btn-block btn-outline-dark mb-2" onclick="window.location.href='./profile.html'">Login</button>
+  
+          <div class="btn-group d-flex" role="group">
+            <button type="button" class="btn btn-primary w-100">
+              <i class="fab fa-facebook-f"></i>
+            </button>
+            <button type="button" class="btn btn-danger w-100">
+              <i class="fab fa-google"></i>
+            </button>
+            <button type="button" class="btn btn-secondary w-100">
+              <i class="fab fa-github"></i>
+            </button>
+          </div>
         </div>
       </div>
     </div>
   </div>
 
+  
   <div class="container" style="margin-top:100px">
     <h1>Search</h1>
     <hr>
@@ -215,10 +279,10 @@
             <div class="tab-pane active">
               <div class="jumbotron p-1 mb-1 mt-1">
                 <div class="row">
-                  <div class="col-sm-3 col-5 d-flex align-items-center">
+                  <div class="col-md-3">
                     <img src="./imgs/square.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-sm-9 col-7">
+                  <div class="col-md-9">
                     <h3>Concerto Mega Fixe</h3>
                     <h6>Porto, Portugal</h6>
                     <h6>17/02/2018</h6>
@@ -227,10 +291,10 @@
               </div>
               <div class="jumbotron p-1 mb-1">
                 <div class="row">
-                  <div class="col-sm-3 col-5 d-flex align-items-center">
+                  <div class="col-md-3">
                     <img src="./imgs/maku.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-sm-9 col-7">
+                  <div class="col-md-9">
                     <h3>Aniversário Makukula</h3>
                     <h6>Kishasa, Congo</h6>
                     <h6>04/03/2018</h6>
@@ -239,11 +303,11 @@
               </div>
               <div class="jumbotron p-1 mb-1">
                 <div class="row">
-                  <div class="col-sm-3 col-5 d-flex align-items-center">
+                  <div class="col-md-3">
                     <img src="./imgs/plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-sm-9 col-7">
-                    <h3>Notas de Plog</h3>
+                  <div class="col-md-9">
+                    <h3>Venda do Parlamento Português</h3>
                     <h6>Porto, Portugal</h6>
                     <h6>29/02/2020</h6>
                   </div>
@@ -251,10 +315,10 @@
               </div>
               <div class="jumbotron p-1 mb-1">
                 <div class="row">
-                  <div class="col-sm-3 col-5 d-flex align-items-center">
+                  <div class="col-md-3">
                     <img src="./imgs/benfica_maritimo.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-sm-9 col-7">
+                  <div class="col-md-9">
                     <h3>Benfica-Marítimo</h3>
                     <h6>Lisboa, Portugal</h6>
                     <h6>03/03/2018</h6>
@@ -263,10 +327,10 @@
               </div>
               <div class="jumbotron p-1 mb-1">
                 <div class="row">
-                  <div class="col-sm-3 col-5 d-flex align-items-center">
+                  <div class="col-md-3">
                     <img src="./imgs/benfica_aves.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-sm-9 col-7">
+                  <div class="col-md-9">
                     <h3>Benfica-Aves</h3>
                     <h6>Lisboa, Portugal</h6>
                     <h6>10/03/2018</h6>
@@ -275,10 +339,10 @@
               </div>
               <div class="jumbotron p-1">
                 <div class="row">
-                  <div class="col-sm-3 col-5 d-flex align-items-center">
+                  <div class="col-md-3">
                     <img src="./imgs/feirense_benfica.jpg" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-sm-9 col-7">
+                  <div class="col-md-9">
                     <h3>Feirense-Benfica</h3>
                     <h6>Santa Maria da Feira, Portugal</h6>
                     <h6>17/03/2018</h6>
@@ -290,30 +354,30 @@
             <div class="tab-pane">
               <div class="jumbotron p-1 mb-1 mt-1">
                 <div class="row">
-                  <div class="col-sm-3 col-5 d-flex align-items-center">
+                  <div class="col-md-3">
                     <img src="./imgs/jonas.png" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-sm-9 col-7">
+                  <div class="col-md-9">
                     <h3>JonasGoncalves</h3>
                   </div>
                 </div>
               </div>
               <div class="jumbotron p-1 mb-1">
                 <div class="row">
-                  <div class="col-sm-3 col-5 d-flex align-items-center">
+                  <div class="col-md-3">
                     <img src="./imgs/cervi.png" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-sm-9 col-7">
+                  <div class="col-md-9">
                     <h3>FrancoCervi</h3>
                   </div>
                 </div>
               </div>
               <div class="jumbotron p-1">
                 <div class="row">
-                  <div class="col-sm-3 col-5 d-flex align-items-center">
+                  <div class="col-md-3">
                     <img src="./imgs/aalmeida.png" class="img-fluid rounded" alt="Cinque Terre">
                   </div>
-                  <div class="col-sm-9 col-7">
+                  <div class="col-md-9">
                     <h3>AndreAlmeida</h3>
                   </div>
                 </div>
@@ -353,6 +417,15 @@
   </div>
 
   <script language="JavaScript" src="./script.js" type="text/javascript" charset="utf-8"></script>
+
+  <footer>
+    <br>
+    <br>
+    <a href="./about.html">
+      <p class="text-center">About Us</p>
+    </a>
+  </footer>
+  
 </body>
 
 </html>
