button added to edit Event

--- a/A3/eventPage.html
+++ b/A3/eventPage.html
@@ -202,11 +202,13 @@
                     Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
                 </p>
                 <button type="button" class="btn btn-default" data-toggle="modal" data-target="#participants">Participants</button>
+                <button type="button" class="btn btn-default" data-toggle="modal">Edit</button>
                 <hr>
                 <h6>Porto, Portugal</h6>
                 <div class="map-responsive">
                     <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Porto+Portugal" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
+
             </div>
         </aside>
         <main class="col-lg-5 col-12 discussionEvent">
