--- a/A3/searchLogged.html
+++ b/A3/searchLogged.html
@@ -200,12 +200,12 @@
                 <div class="container">
                   <div class="form-check mb-2">
                     <label class="form-check-label">
-                      <input type="checkbox" class="form-check-input" name="optionsCheckCategory" id="optionsCheck1" value="option1"> Futebol
+                      <input type="checkbox" class="form-check-input" name="optionsCheckCategory" id="optionsCheck1" value="option1"> Music
                     </label>
                   </div>
                   <div class="form-check mb-2">
                     <label class="form-check-label">
-                      <input type="checkbox" class="form-check-input" name="optionsCheckCategory" id="optionsCheck2" value="option2"> Concertos
+                      <input type="checkbox" class="form-check-input" name="optionsCheckCategory" id="optionsCheck2" value="option2"> Football
                     </label>
                   </div>
                 </div>
