--- a/A3/eventPage.html
+++ b/A3/eventPage.html
@@ -200,12 +200,14 @@
                         <h3>Concerto Mega Fixe</h3>
                     </div>
                     <div class="col-md-6 col-12 d-flex justify-content-center align-items-center">
-                        <button class="btn btn-success" type="button" title="Accept">
-                            <i class="fas fa-check"></i>
-                        </button>
-                        <button class="btn btn-danger" type="button" title="Reject">
-                            <i class="fas fa-times"></i>
-                        </button>
+                        <div class="btn-group d-flex" role="group">
+                            <button class="btn btn-success" type="button" title="Accept">
+                                <i class="fas fa-check fa-fw"></i>
+                            </button>
+                            <button class="btn btn-danger" type="button" title="Reject">
+                                <i class="fas fa-times fa-fw"></i>
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <hr>
