--- a/A3/search.html
+++ b/A3/search.html
@@ -180,11 +180,11 @@
             <input type="text" class="form-control" placeholder="Enter your Password">
           </div>
   
-          <button type="button" class="btn btn-block btn-outline-dark mb-2" onclick="window.location.href='./profile.html'">Login</button>
+          <button type="button" class="btn btn-block btn-outline-dark mb-2" onclick="window.location.href='./loggedMainPage.html'">Login</button>
   
           <div class="btn-group d-flex" role="group">
             <button type="button" class="btn btn-primary w-100">
-              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-facebook-f" onclick="window.location.href='./admin.html'"></i>
             </button>
             <button type="button" class="btn btn-danger w-100">
               <i class="fab fa-google"></i>
