--- a/search.html
+++ b/search.html
@@ -180,11 +180,11 @@
             <input type="text" class="form-control" placeholder="Enter your Password">
           </div>
   
-          <button type="button" class="btn btn-block btn-outline-dark mb-2" onclick="window.location.href='./profile.html'">Login</button>
+          <button type="button" class="btn btn-block btn-outline-dark mb-2" onclick="window.location.href='./loggedMainPage.html'">Login</button>
   
           <div class="btn-group d-flex" role="group">
             <button type="button" class="btn btn-primary w-100">
-              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-facebook-f" onclick="window.location.href='./admin.html'"></i>
             </button>
             <button type="button" class="btn btn-danger w-100">
               <i class="fab fa-google"></i>
@@ -232,12 +232,12 @@
                 <div class="container">
                   <div class="form-check mb-2">
                     <label class="form-check-label">
-                      <input type="checkbox" class="form-check-input" name="optionsCheckCategory" id="optionsCheck1" value="option1"> Futebol
+                      <input type="checkbox" class="form-check-input" name="optionsCheckCategory" id="optionsCheck1" value="option1"> Music
                     </label>
                   </div>
                   <div class="form-check mb-2">
                     <label class="form-check-label">
-                      <input type="checkbox" class="form-check-input" name="optionsCheckCategory" id="optionsCheck2" value="option2"> Concertos
+                      <input type="checkbox" class="form-check-input" name="optionsCheckCategory" id="optionsCheck2" value="option2"> Football
                     </label>
                   </div>
                 </div>
