--- a/eventPageAccepted.html
+++ b/eventPageAccepted.html
@@ -200,14 +200,9 @@
                         <h3>Concerto Mega Fixe</h3>
                     </div>
                     <div class="col-md-6 col-12 d-flex justify-content-center align-items-center">
-                        <div class="btn-group d-flex" role="group">
-                            <button class="btn btn-success" type="button" title="Accept" onclick="window.location.href='./eventPageAccepted.html'">
-                                <i class="fas fa-check fa-fw"></i>
-                            </button>
-                            <button class="btn btn-danger" type="button" title="Reject">
-                                <i class="fas fa-times fa-fw"></i>
-                            </button>
-                        </div>
+                        <button class="btn btn-outline-danger" type="button" onclick="window.location.href='./eventPage.html'">
+                            Cancel Participation
+                        </button>
                     </div>
                 </div>
                 <hr>
